--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+            Shothand
+                color > image > position > repeat > [size] > attachment */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -30,6 +37,9 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores sed similique aliquid fugiat eligendi, ab, voluptate ex assumenda modi facere aspernatur consequatur at blanditiis tempore voluptatem quo sequi amet rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi officiis minus dolor ipsam obcaecati vero omnis veniam fugiat esse, laboriosam, vitae voluptates hic facere. Alias cupiditate provident eligendi id aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sed id, possimus voluptatum iure cum enim vitae aliquid, aliquam voluptate, cumque explicabo. Quaerat architecto velit nisi? Iste molestias minima voluptatum.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores sed similique aliquid fugiat eligendi, ab, voluptate ex assumenda modi facere aspernatur consequatur at blanditiis tempore voluptatem quo sequi amet rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi officiis minus dolor ipsam obcaecati vero omnis veniam fugiat esse, laboriosam, vitae voluptates hic facere. Alias cupiditate provident eligendi id aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sed id, possimus voluptatum iure cum enim vitae aliquid, aliquam voluptate, cumque explicabo. Quaerat architecto velit nisi? Iste molestias minima voluptatum.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores sed similique aliquid fugiat eligendi, ab, voluptate ex assumenda modi facere aspernatur consequatur at blanditiis tempore voluptatem quo sequi amet rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi officiis minus dolor ipsam obcaecati vero omnis veniam fugiat esse, laboriosam, vitae voluptates hic facere. Alias cupiditate provident eligendi id aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sed id, possimus voluptatum iure cum enim vitae aliquid, aliquam voluptate, cumque explicabo. Quaerat architecto velit nisi? Iste molestias minima voluptatum.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores sed similique aliquid fugiat eligendi, ab, voluptate ex assumenda modi facere aspernatur consequatur at blanditiis tempore voluptatem quo sequi amet rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi officiis minus dolor ipsam obcaecati vero omnis veniam fugiat esse, laboriosam, vitae voluptates hic facere. Alias cupiditate provident eligendi id aliquid. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis sed id, possimus voluptatum iure cum enim vitae aliquid, aliquam voluptate, cumque explicabo. Quaerat architecto velit nisi? Iste molestias minima voluptatum.</p>
     </main>
 </body>
