--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -24,9 +25,30 @@
             text-align: right;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: aquamarine;
+        }
+
+        tbody tr:nth-child(odd) {
+            background-color: darkgray;
+        }
+
+        tbody tr:nth-child(even) {
+            background-color: beige;
+        }
+
         thead, tfoot {
             background-color: black;
             color: white;
+        }
+
+        thead tr th {
+            position: sticky;
+            top: 0;
+            background-color: black;
         }
     </style>
 </head>
@@ -35,10 +57,13 @@
         Uso de tabela grandes
     </h1>
     <table>
+        <caption>
+            População das Unidades Federativas
+        </caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -54,10 +79,70 @@
                 <td>Rio de Janeiro</td>
                 <td class="num">17.264.943</td>
             </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">45.919.049</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">21.168.791</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">17.264.943</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">45.919.049</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">21.168.791</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">17.264.943</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">45.919.049</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">21.168.791</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">17.264.943</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">45.919.049</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">21.168.791</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">17.264.943</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">45.919.049</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">21.168.791</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">17.264.943</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>84.352.783</strong></td>
             </tr>
         </tfoot>
