--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -20,7 +20,9 @@
     <h1>Teste com IFrame</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore, esse? Ex incidunt odit, unde, quod debitis mollitia excepturi perspiciatis suscipit veniam omnis consequuntur nesciunt eius expedita. Molestias blanditiis doloribus molestiae?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi iusto eum consequuntur ipsam qui, eos beatae, distinctio quod perspiciatis excepturi voluptate asperiores quidem amet quibusdam vel pariatur. Ut, soluta debitis.</p>
     
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente seu navegador não é compatível com isso.</p>
+    </iframe>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio repellat tenetur, voluptatem similique minus hic eos. Architecto itaque et totam ab quidem cum eveniet, temporibus repellat consequuntur deleniti, vel quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex ut ratione in libero dolores quas corrupti temporibus quidem delectus beatae facere dolor cumque nulla, impedit accusamus ea repudiandae consectetur illo.</p>
 </body>
