--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto fuga repellat numquam necessitatibus, voluptates pariatur sed odit voluptatibus, neque laudantium nobis officiis molestiae atque omnis vero, a rem corrupti adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. A inventore reprehenderit impedit odit at veniam est, minima perferendis ducimus, animi nam, beatae corrupti totam expedita temporibus magni quasi culpa nulla!</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae non voluptate aut, ea explicabo voluptates quisquam illo optio dicta, iure reprehenderit delectus, illum voluptatem nisi ipsa facere quis. Harum, magnam</p><img src='imagens/Magnum.png'>"
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
