--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
+
+
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="celular" src="imagens/icon-phone.png" alt="Acesando via celular">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
+        <img id="print" src="imagens/icon-print.png" alt="Versão para impressão">
+        <img id="PC" src="imagens/icon-pc.png" alt="Versão para desktop">
+        <img id="TV" src="imagens/icon-tv.png" alt="Versão para TV">
+    </main> 
 </body>
 </html>
